# nonsense

./: CMakeLists.txt  readme.md
AwesomeGames/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: EntryPoint.h
Engine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Logger.h  MathUtility.h  Object.h  PhysicsSystem.h  World.h
Engine/src/: EntryPoint.cpp
Engine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Logger.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp
SpaceInvaders/: CMakeLists.txt  config.h.cfg
SpaceInvaders/content/SpaceShips/: T_Boss_01.xcf
SpaceInvaders/include/: config.h
SpaceInvaders/include/component/weapon/: LaserComponent.h  WeaponComponent.h
SpaceInvaders/include/gameFramework/: GameApplication.h
SpaceInvaders/include/player/: PlayerSpaceship.h
SpaceInvaders/include/projectile/: LaserBeam.h  Projectile.h
SpaceInvaders/include/spaceship/: Spaceship.h
SpaceInvaders/include/weapon/: AttackComponent.h  LaserComponent.h
SpaceInvaders/src/component/weapon/: LaserComponent.cpp  WeaponComponent.cpp
SpaceInvaders/src/gameFramework/: GameApplication.cpp
SpaceInvaders/src/player/: PlayerSpaceship.cpp
SpaceInvaders/src/projectile/: LaserBeam.cpp  Projectile.cpp
SpaceInvaders/src/spaceship/: Spaceship.cpp
SpaceInvaders/src/weapon/: AttackComponent.cpp  LaserComponent.cpp
